Changes in @NEW@:
  o New Features:
    * cvc diff now optionally takes a set of files to diff.  Note that
      providing a revision now requires the --revision argument, to
      differentiate revisions from files. (CNY-2384)

  o Client Changes:
    * Support for obtaining changeset fingerprints has been added to
      the network repository client.
    * Transient files whose contents have changed will be restored if the
      file had been previously removed from the local system (CNY-2987)

  o Server Changes:
    * Code using a shim client can now more securely "imitate" a user by
      passing in a ValidPasswordToken object in lieu of the actual
      password. (CNY-2968)

  o Bug Fixes:
    * ABI dependencies are no longer checked on erase. (CNY-2991)
    * createSourceTrove now honors filestreams marked as config. (CNY-3011)

Changes in 2.0.28:
  o New Features:
    * Groups now support pre-rollback scripts. (CNY-2908)

  o Server Changes:
    * Added paranoidCommits option which checks trove data has been stored
      properly in the SQL database before allowing the commit to complete.

  o Bug Fixes:
    * Fixed handling of troves erased by an update job which satisfy
      dependencies of packages being installed, so that an error
      message is given instead of an assertion being raised (CNY-2996).

  o Build Changes:
    * The default build requirements for rmake have been added to the
      BaseRequiresPackage base class to allow rMake to build against non-rPath
      Linux platforms (CNY-3005).

  o Other Changes:
    * New PGP signing keys have been added.

Changes in 2.0.27:
  o New Features:
    * Metadata information can now be extracted from debian packages.
      (CNY-2995)

  o Client Changes:
    * The "conary rollback" command now handles --info and --interactive
      flags, which behave similarly to the "conary update" flags. (CNY-820)

  o Bug Fixes:
    * Conary no longer checks for the existence of a db journal on startup,